fix: adjust scrollbar track and thumb styles for improved visibility

--- a/nui/src/index.css
+++ b/nui/src/index.css
@@ -21,18 +21,18 @@ body {
 ::-webkit-scrollbar-track {
   border-radius: var(--mantine-radius-sm);
   background: var(--mantine-color-dark-7); 
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: var(--mantine-radius-sm);
-  background: var(--mantine-primary-color-6); 
+  background: var(--mantine-color-dark-5); 
   cursor:pointer;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--mantine-primary-color-7); 
+  background: var(--mantine-color-dark-4);  
 }
 
 .mantine-TooltipFloating-tooltip {
